--- a/src/documents/styles/custom.css.less
+++ b/src/documents/styles/custom.css.less
@@ -37,14 +37,22 @@ a:hover, a:active  {
 	}
 	img {
 		display: block;
-		margin: 20px auto;
+		margin: 40px auto;
 		width: 85%;
 	}
 	iframe {
 		position: relative;
 		display: block;
-		margin: 20px auto;
+		margin: 40px auto;
 		width: 85%;
+	}
+	p {
+		margin: 25px auto;
+	}
+	blockquote {
+		p {
+			margin: 5px auto;
+		}
 	}
 }
 
@@ -70,6 +78,7 @@ blockquote p {
 	font-size: 12px;
 	text-align: center;
 	margin-top: -10px;
+	margin-bottom: 40px;
 }
 
 footer a, footer a:visited {
