--- a/src/documents/styles/custom.css.less
+++ b/src/documents/styles/custom.css.less
@@ -20,7 +20,8 @@ a, a:visited {
 
 a:hover, a:active  {
 	color: #000;
-	text-decoration: underline;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 .post {
@@ -160,14 +161,14 @@ footer {
 
 #map {
 	width: 100%;
-	height: 300px;
+	height: 100vh;
 	position: fixed;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 12px;
-	z-index: 1000;background-size: 100% 100%;
-	margin: 0 0 25px 40px;
-	background: url('/images/solaris.jpg') no-repeat left top;
-	background-size: 100% 100%;
+	z-index: 1000;
+	padding: 0 0 25px 40px;
+	// background: url('/images/unknown.jpg') no-repeat left top;
+	// background-size: 100%;
 
 }
 
@@ -187,7 +188,7 @@ h1, h2, h3, h4 {
 
 #map h1 {
 	font-size: 20px;
-	margin: 15px 0;
+	margin: 0;
 }
 
 #map a {
